--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "play.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./test/app.spec.js --watch",
     "start": "nodemon ./src/app.js"
   },
   "keywords": [],
@@ -12,14 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/eslint": "^8.4.6",
+    "@types/jest": "^29.1.2",
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/eslint-parser": "^7.19.1",
     "@types/nodemon": "^1.19.2",
     "eslint": "^8.24.0",
+    "eslint-plugin-jest": "^27.1.2",
     "nodemon": "^2.0.20"
   }
 }
